--- a/.github/workflows/on-push-action.yml
+++ b/.github/workflows/on-push-action.yml
@@ -26,4 +26,5 @@ jobs:
         git add my_file_test.txt
         git commit -m "Add new file"
         git push https://$ACCESS_TOKEN@github.com/Geissoncr/quantos-seguidores.git
-      env: ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      env: 
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
