--- a/.github/workflows/on-push-action.yml
+++ b/.github/workflows/on-push-action.yml
@@ -21,7 +21,7 @@ jobs:
       run: python main.py
       
     - name: Write to file
-      run: date +%s > my_file_test.txt
+      run: date +%c > log_exec_on_push.txt
 
     - name: test Commit changes
       run: |
