--- a/.github/workflows/schedule-actions-daily.yml
+++ b/.github/workflows/schedule-actions-daily.yml
@@ -37,4 +37,5 @@ jobs:
         git add my_file.txt
         git commit -m "Add new file"
         git push https://$ACCESS_TOKEN@github.com/Geissoncr/quantos-seguidores.git
-      env: ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      env: 
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
